Trying to fix header spacing on logo

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -10,7 +10,7 @@ body {
 
 .header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: center;
   background: white;
   border-bottom: 1px solid #ddd;
@@ -48,4 +48,7 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
 }
